[fix] group_idの追加
